Taint&Tolaration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tejas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tejas
  template:
    metadata:
      labels:
        app: tejas
    spec:
      nodeSelector:
        env: prod
      tolarations:
      - key: "workload"
        operator: "Equal"
        value: "database"
        effect: "NoSchedule"
      containers:
      - name: tejas
        image: nginx:latest
        ports:
        - containerPort: 80
