debug_pod.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: debug-pod
spec:
  restartPolicy: always
  containers:
    - name: debug-container
      image: nicolaka/netshoot
      command: ["sleep", "infinity"]
