deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  annotations:
    description: "Deployment for Petclinic application"
    kubernetes.io/change-cause: "Initial deployment of Petclinic application"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      restartPolicy: Always
      containers:
      - name: petclinic-pod
        image: nginx:latest
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
      resources:
        requests:
          memory: "200Mi"
          cpu: "200m"
        limits:
          memory: "400Mi"
          cpu: "400m"
