init_container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-container-example
spec:
  containers:
  - name: myservice
    image: nginx:latest
    ports:
    - containerPort: 80
