pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test1
spec:
  containers:
  - command:
    - ping
    - -c
    - "50"
    - google.com
    image: busybox
    name: test1
