req_limit.yaml
apiVersion: v1
kind: Pod
metadata:
  name: resource-demo
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        memory: "256Mi"
        cpu: "250m"     # 250 millicores = 0.25 CPU
      limits:
        memory: "512Mi"
        cpu: "500m"     # 500 millicores = 0.5 CPU
    ports:
    - containerPort: 80
