secret.yaml
#this is volume and volume mount example for secret
# apiversion: v1
# kind: Pod
# metadata: 
#     name: secret-pod
# spec:
#     volumes:
#     - name: secret-volume
#       secret:
#         secretName: db-secret
#     containers:
#     - name: secret-container
#       image: nginx:latest
#       volumeMounts:
#         - name: secret-volume
#           mountPath: "/etc/secrets"
#           readOnly: true 
      
---
# This is an example of using the secret in environment variables
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
spec:
  containers:
  - name: app
    image: nginx
    ports:
    - containerPort: 80
