Horizontal_pod_scailing.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic 
    spec:
      containers:
      - name: petclinic
        image: httpd:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "10m"
            memory: "20Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
spec:
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
