service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tejas-backend-service
spec:
  selector:
    app: backend-tejas
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tejas-backend-pod-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-tejas
  template:
    metadata:
      labels:
        app: backend-tejas
    spec:
      containers:
      - name: backend-tejas
        image: httpd:latest
        ports:
        - containerPort: 80


---

apiVersion: v1
kind: Service
metadata:
  name: tejas-frontend-service
spec:
  selector:
    app: frontend-tejas
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tejas-frontend-pod-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-tejas
  template:
    metadata:
      labels:
        app: frontend-tejas
    spec:
      containers:
      - name: frontend-tejas
        image: nginx:latest
        ports:
        - containerPort: 80
