ingress_service_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petclinic-app
  template:
    metadata:
      labels:
        app: petclinic-app
    spec:
      containers:
        - name: petclinic-app-container
          image: httpd:latest
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
Metadata:
  name: petclinic-app-service
spec:
  selector:
    app: petclinic-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
Metadata:
  name: petclinic-app-ingress
spec:
  rules:
  - host: www.petclinic-app.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: petclinic-app-service
            port:
              number: 80
        paths:
        - pathType: Prefix
          path: "/api"
          backend:
            service:
              name: petclinic-app-api-service
              port:
                number: 8080
